--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore"
   },
   "dependencies": {
+    "core-js": "^3.26.1",
+    "postcss": "^8.4.20",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -16,9 +18,11 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.2.4",
     "vite": "^4.0.0"
   }
 }
