--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "core-js": "^3.26.1",
     "postcss": "^8.4.20",
+    "tw-elements": "^1.0.0-alpha13",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
